# StudentProcessingTest1

./: CMakeLists.txt  README.md  student_file_1.txt  vcpkg-configuration.json  vcpkg.json
client/: CMakeLists.txt
client/src/: client_main.cpp
server/: CMakeLists.txt
server/include/: student_data.h
server/src/: server_main.cpp  student_data.cpp
